# mw-open-mpi

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CarAccident.cpp  CarAccident.h  Makefile  Query.cpp  Query.h  README.md  Utils.cpp  Utils.h  cmake_install.cmake  main.cc  mw-open-mpi  mw-open-mpi-exec  mw-open-mpi.cbp  parser.cc  rebuild.sh
